--- a/style.css
+++ b/style.css
@@ -253,3 +253,67 @@ nav ul li a:hover,
 nav ul li a.active{
     background: #f00;
 }
+
+*,*:after, *:before{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.loader {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    perspective: 800px;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+
+.loader .loader-item {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    z-index: 10000;
+}
+
+.loader .loader-item:nth-child(1) {
+    border-bottom: 6px solid #ffffff;
+    transform: rotateX(35deg) rotateY(-45deg);
+    animation: rotate-one 1s linear infinite;
+}
+
+.loader .loader-item:nth-child(2) {
+    border-right: 6px solid #ffffff;
+    transform: rotateX(50deg) rotateY(10deg);
+    animation: rotate-two 1s linear infinite;
+}
+
+.loader .loader-item:nth-child(3) {
+    border-top: 6px solid #ffffff;
+    transform: rotateX(35deg) rotateY(55deg);
+    animation: rotate-three 1s linear infinite;
+}
+
+@keyframes rotate-one {
+    to {
+        transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+    }
+}
+
+@keyframes rotate-two {
+    to {
+        transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+    }
+}
+
+@keyframes rotate-three {
+    to {
+        transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+    }
+}
